--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Trabalho Prático 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -16,16 +17,17 @@
         crossorigin="anonymous"></script>
 
     <!-- Início Cabeçalho -->
-    <header class="bg-secondary text-white py-3 d-flex justify-content-between align-items-center border-bottom">
+    <header
+        class="container-fluid bg-light text-dark py-4 d-flex justify-content-between align-items-center border-bottom">
         <!-- Nome à esquerda -->
         <h1 class="m-0">Guilherme C. Ladislau</h1>
         <!-- Seções à direita -->
         <nav>
-            <ul class="list-unstyled d-flex m-0 p-0">
-                <li class="mx-3"><a href="#secao1" class="text-white text-decoration-none">Seção 1</a></li>
-                <li class="mx-3"><a href="#secao2" class="text-white text-decoration-none">Seção 2</a></li>
-                <li class="mx-3"><a href="#secao3" class="text-white text-decoration-none">Seção 3</a></li>
-                <li class="mx-3"><a href="#secao4" class="text-white text-decoration-none">Seção 4</a></li>
+            <ul class="list-unstyled d-flex m-0 p-0 text-dark">
+                <li class="mx-3"><a href="#secao1" class="text-dark text-decoration-none">Seção 1</a></li>
+                <li class="mx-3"><a href="#secao2" class="text-dark text-decoration-none">Seção 2</a></li>
+                <li class="mx-3"><a href="#secao3" class="text-dark text-decoration-none">Seção 3</a></li>
+                <li class="mx-3"><a href="#secao4" class="text-dark text-decoration-none">Seção 4</a></li>
             </ul>
         </nav>
     </header>
@@ -34,11 +36,11 @@
     <!-- Fim Cabeçalho -->
 
     <!-- Seção 1 - Perfil -->
-    <section id="secao1" class="mb-5">
+    <section id="secao1" class="mb-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="text-start mb-4">Perfil</h2> <!-- Título "Perfil" alinhado à esquerda -->
+                    <h2 class="text-start mb-4 mt-4">Perfil</h2> <!-- Título "Perfil" alinhado à esquerda -->
                     <!-- Linha abaixo do título -->
                     <hr class="mb-4">
                 </div>
@@ -70,7 +72,8 @@
 
     <!-- Seção 2 -->
     <section id="secao2" class="container py-4">
-        <h2>Repositórios (3)</h2>
+        <h2 class="mb-4">Repositórios (3)</h2>
+        <hr class="mb-4">
         <div class="card-group">
             <div class="card">
                 <a href="repo1.html" class="text-decoration-none text-dark">
@@ -79,8 +82,8 @@
                         <p class="card-text">Esta página utilizando HTML e CSS, teve como funcionalidade aprender sobre
                             como commitar no git e github.</p>
                         <div>
-                            <i class="fas fa-star me-1"> 3</i>
-                            <i class="fas fa-users ms-3"> 5</i>
+                            <i class="fas fa-star me-1">3</i>
+                            <i class="fas fa-users ms-3">5</i>
                         </div>
                     </div>
                 </a>
@@ -101,10 +104,7 @@
                 <a href="repo3.html" class="text-decoration-none text-dark">
                     <div class="card-body">
                         <h5 class="card-title">Prática 3</h5>
-                        <p class="card-text">Nesta página, o código foi modificado para exibir duas bordas ao redor de
-                            cada imagem e uma terceira borda envolvendo ambas, proporcionando destaque visual e melhor
-                            estruturação do conteúdo.
-                        </p>
+                        <p class="card-text">Criado para essa tarefa, mostra o arquivo no github.</p>
                         <div>
                             <i class="fas fa-star me-1"> 5</i>
                             <i class="fas fa-users ms-3"> 5</i>
@@ -118,6 +118,7 @@
     <!-- Seção 3 -->
     <section id="secao3" class="container py-4">
         <h2>Jogos SoulsLike Recomendados</h2>
+        <hr class="mb-4">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -167,7 +168,9 @@
     </section>
 
     <!-- Seção 4 - Colegas de trabalho -->
-    <section id="secao4 border-bottom">
+    <section id="secao4" class="container py-4">
+        <h2>Colegas de Trabalho</h2>
+        <hr class="mb-4">
         <div class="container mt-4 mb-4">
             <div class="row">
                 <!-- Primeira imagem -->
@@ -175,7 +178,7 @@
                     <div class="text-center">
                         <img src="images/colegas/gustavo.jpg" class="rounded" alt="Imagem 1" style="max-width: 100%;">
                     </div>
-                    <div class="card-body text-center text-info mt-2">
+                    <div class="card-body text-center text-dark mt-2">
                         <h5 class="card-title">Gustavo Horta</h5>
                     </div>
                 </div>
@@ -184,7 +187,7 @@
                     <div class="text-center">
                         <img src="images/colegas/italo.jpg" class="rounded" alt="Imagem 2" style="max-width: 100%;">
                     </div>
-                    <div class="card-body text-center text-info mt-2">
+                    <div class="card-body text-center text-dark mt-2">
                         <h5 class="card-title">Ítalo Ângelo</h5>
                     </div>
                 </div>
@@ -193,7 +196,7 @@
                     <div class="text-center">
                         <img src="images/colegas/kaio.jpg" class="rounded" alt="Imagem 3" style="max-width: 100%;">
                     </div>
-                    <div class="card-body text-center text-info mt-2">
+                    <div class="card-body text-center text-dark mt-2">
                         <h5 class="card-title">Kaio Vidigal</h5>
                     </div>
                 </div>
@@ -202,7 +205,7 @@
                     <div class="text-center">
                         <img src="images/colegas/mateus.jpg" class="rounded" alt="Imagem 4" style="max-width: 100%;">
                     </div>
-                    <div class="card-body text-center text-info mt-2">
+                    <div class="card-body text-center text-dark mt-2">
                         <h5 class="card-title">Mateus Freitas</h5>
                     </div>
                 </div>
@@ -210,7 +213,7 @@
         </div>
     </section>
     <!-- Começo Rodapé -->
-    <footer class="mt-4 border-top bg-secondary text-white py-4 px-4">
+    <footer class="mt-4 border-top bg-light text-dark py-4 px-4">
         <div class="container">
             <p class="m-0">Site desenvolvido por Guilherme Caçuci Ladislau</p>
         </div>
